--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.0.6",
-    "@angular/common": "^20.0.6",
-    "@angular/compiler": "^20.0.6",
-    "@angular/core": "^20.0.6",
-    "@angular/forms": "^20.0.6",
-    "@angular/platform-browser": "^20.0.6",
-    "@angular/platform-browser-dynamic": "^20.0.6",
-    "@angular/router": "^20.0.6",
+    "@angular/animations": "^20.3.12",
+    "@angular/common": "^20.3.12",
+    "@angular/compiler": "^20.3.12",
+    "@angular/core": "^20.3.12",
+    "@angular/forms": "^20.3.12",
+    "@angular/platform-browser": "^20.3.12",
+    "@angular/platform-browser-dynamic": "^20.3.12",
+    "@angular/router": "^20.3.12",
+    "@angular/service-worker": "^20.3.12",
     "@fortawesome/angular-fontawesome": "^2.0.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "rxjs": "~7.8.0",
@@ -27,7 +28,7 @@
   "devDependencies": {
     "@angular/build": "^20.0.5",
     "@angular/cli": "^20.0.5",
-    "@angular/compiler-cli": "^20.0.6",
+    "@angular/compiler-cli": "^20.3.12",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
